--- a/style.css
+++ b/style.css
@@ -1,417 +1,538 @@
-/* Global View */
-
 html {
 
-    /* Font Specifications */
-    color: white;
-    font-family: 'Asap', sans-serif;
+
+
+
+    /* height: 100%; */
+
+    /* transition-duration: 1s; */
+
+
+    transition-duration: 1000ms;
+
+
 }
 
 body {
 
-    width: 100vw;
-    height: 100vh;
 
-    background-color: rgb(203, 203, 203, 1);
 
-    background-image: url(Logo\ Background.png);
+    /* font-family: Arial, Helvetica, sans-serif; */
+    /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+    color: #F6F5F4;
 
-    overflow-x: hidden;
+}
 
+/* Bootstrap Row Reset */
+.row {
+    border: 0px;
+    margin-right: 0;
+    margin-left: 0;
+    max-width: 100%;
 }
 
 .container {
+    background-image: linear-gradient(to top, #FF364C, #FF5C00);
+    max-width: 100vw;
 
-    width: 100vw;
-    height: 100vh;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 85px;
-    padding-bottom: 380px;
+    padding: 0;
 
 }
 
-.container>* :not(header) {
-    transition: 1s;
-
-}
-
-
+/* Header */
 header {
-    background-color: rgb(80, 80, 80);
-    width: 100vw;
-    height: 15vh;
-    position: fixed;
+    background-color: #FF364C;
 
-    /* no idea what this does but my god this is awesome */
-    top: 0;
-
-    margin-left: auto;
-    margin-right: auto;
+    padding: 16px 50px;
 
 }
 
-.header-section {
-
-    width: 50%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-
-}
-
-.logo {
-    /* background-color: red; */
-
-    flex: 1;
-    transition: none;
-    height: 100%;
-    width: 100%;
-    
-}
-
-.logo a {
-    margin-top: 7.5vh;
-    position: fixed;
-    transition: none;
-
-}
-
-nav {
-    /* background-color: brown; */
-    flex: 2;
-    text-align: end;
-
-}
-
-.nav-mobile {
-    /* background-color: red; */
-    top: 0;
-    max-width: 15vh;
-    min-width: 15vh;
-    min-height: 15vh;
-    max-height: 15vh;
-    justify-content: top;
-
-    /* background-color: aquamarine; */
-    display: none;
-    z-index: 100;
-
-}
-
-.nav-mobile:hover .dropdown{
-    /* background-color: brown; */
-    display: block;
-    
-}
-
-.dropdown{
-    margin-top: -5%;
-    margin-left: -102%;
-    /* background-color: blueviolet; */
-    transform-origin: top right;
-    width: 200%;
-    height: 200%;
-    text-align: right;
-
-    display: none;
-}
-
-.dropdown .nav-button{
-
-    margin-top: 5%;
-    width: 100%;
-    padding: 3% 0%;
-
-}
-
-
-.nav-mobile img {
-
-    max-width: 100%;
-    min-width: 100%;
-
-    max-height: 100%;
-    min-height: 100%;
-    float: left;
-}
-
-.nav-button {
-    background-color: rgb(80, 80, 80);
-
-    flex-wrap: nowrap;
-    display: inline-block;
-
-    margin-top: 6vh;
-    padding-bottom: 1%;
-    width: 4rem;
-    text-align: center;
-    margin-left: 7%;
-
-    border: 0.1rem solid;
-    border-color: lightgray;
-    border-radius: 5%;
-
-    box-shadow: 0px 1px 2px rgb(136, 136, 136, 1);
-
-}
-
-.nav-button:hover,
-.nav-button:hover a {
-    transition: 1s;
-    color: black;
-
-}
-
-.nav-button:hover {
-    background-color: white;
-
-}
-
-.nav-button:active {
-    background-color: black;
-    transition: 0.5s;
-}
-
+/* Main */
 main {
-    width: 50%;
-    margin-left: 25%;
 
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    margin-top: 2.5%;
+    padding-top: 128px;
+    padding-bottom: 128px;
 
 }
 
-.card {
-    margin-bottom: 1rem;
-    min-width: 32%;
-    max-width: 32%;
-    max-height: 100%;
-    transition: 2s;
+/* Banner and Home Page */
+.banner {
+
+    background-color: #2A2D33;
+
+    width: 100%;
 
 }
 
-.card img {
-    min-width: 100%;
-    max-width: 100%;
-    margin-bottom: -2%;
+.HPIntro {
 
-}
-
-.card p::first-line {
-
-    font-weight: bold;
-}
-
-.card-description {
-
-    /* display: flex; */
-    /* flex-flow: column; */
-
-    background-color: aquamarine;
-    border: 0.01rem solid;
-    border-color: lightgray;
+    padding: 0% 20%;
     text-align: center;
-    height: 3rem;
-    vertical-align: middle;
-
-    padding: 5% 4%;
-    z-index: 1;
-
-    box-shadow: 0px 3px 3px rgb(136, 136, 136, 1);
 
 }
 
-/* h1 {
+input {
+
+    background-color: #D9D9D9;
+    border: none;
+
+    height: 2.375rem;
+    width: 32rem;
 
     font-size: 1rem;
-    font-weight: bold;
+    line-height: 1.625rem;
+    font-weight: 400;
+    font-family: 'Raleway', sans-serif;
+    color: #46362D;
 
-} */
+}
+
+/* Footer */
+footer {
+
+    color: #F6F5F4;
+    background-color: #3C3C3C;
+    margin-top: 40px;
+
+}
+
+footer h5 {
+
+    word-spacing: 0.1rem;
+    line-height: 1.8rem;
+    font-weight: 200;
+
+}
+
+footer button:hover {
+
+    background-color: #FF364C;
+    color: #2A2D33;
+    /* text-shadow: 0px 0px 5px #3a3a3a; */
+    transition-duration: 200ms;
+
+}
+
+.footerImg {
+
+    margin-top: 5rem;
+    left: 80px;
+
+}
+
+
+.pageBottom {
+
+    height: 70px;
+
+}
+
+
+.topBtn {
+
+    /* display: flex; */
+    position: fixed;
+    /* align-self: center; */
+
+    transform: translate(85vw, 90vh);
+
+    /* translateX(-50%); */
+    width: 168px;
+    height: 48px;
+    border: none;
+
+
+    flex-direction: row;
+
+    color: #F6F5F4;
+
+    background-color: #525252;
+
+}
+
+
+
+
+/* privacy Policy | Written Sections */
+.PPLetter {
+
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 100px;
+    /* padding-bottom: 50px; */
+
+}
+
+.PPList {
+
+    line-height: 1.3rem;
+    margin-left: 1rem;
+
+
+}
+
+.PPTextSpaceTitle {
+
+    padding-top: 4rem;
+
+}
+
+.PPTextSpace {
+
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+
+}
+
+/* debug tool */
+.color {
+
+    background-color: #ff3694;
+
+}
+
+/* Visual Gloss */
+
+.pictureBoxShadow {
+
+    box-shadow: 0px 0px 25px 2px rgba(0, 0, 0, 0.25);
+
+}
+
+.oddPictureShadow {
+
+    /* filter: drop-shadow(0 0 0.75rem crimson); */
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
+
+}
+
+.mapBorder {
+
+
+    border: solid;
+    border-color: #3C3C3C;
+    border-width: 4px;
+
+}
+
+.bannerImg {
+
+    margin-top: 64px;
+    margin-bottom: 64px;
+    margin-left: 64px;
+
+}
+
+.oddPictureShadowBlack {
+
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.25));
+
+}
+
+/* nav */
+nav {
+
+    padding-right: 5%;
+    padding-left: 5%;
+    /* background-color: #3C3C3C; */
+
+}
+
+nav a {
+
+    margin-left: 64px;
+
+    font-size: 1.563rem;
+    line-height: 1.625rem;
+    font-weight: 400;
+    font-family: 'Raleway', sans-serif;
+    color: #F6F5F4;
+
+}
+
+/* sections */
+section {
+
+    margin-top: 128px;
+    margin-bottom: 128px;
+
+}
+
+.sectionBox {
+
+    background-color: #FF364C;
+    width: 256px;
+    height: 256px;
+
+
+}
+
+.sectionBoxInvis {
+
+    background-color: #ffffff00;
+    width: 256px;
+    height: 256px;
+    margin: 4rem 1rem;
+
+}
+
+section a {
+
+    text-decoration: none;
+    border: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+}
+
+/* Fonts, colours, and sizes */
+a:hover {
+
+    color: #B31426;
+    transition-duration: 200ms;
+
+}
+
+h1 {
+
+    font-size: 6rem;
+    line-height: 7.5rem;
+    font-family: 'Bebas Neue', cursive;
+    color: #F6F5F4;
+}
+
+h2 {
+
+    font-size: 3.052rem;
+    line-height: 3.815rem;
+    font-family: 'Bebas Neue', cursive;
+    color: #D1CDCA;
+
+}
+
+
+
+h3 {
+    font-size: 48px;
+    line-height: 3.05125rem;
+    font-family: 'Bebas Neue', cursive;
+    color: #F6F5F4;
+    letter-spacing: 1.5rem;
+}
+
+h4 {
+
+    font-size: 2.441rem;
+    line-height: 3.05125rem;
+    word-spacing: 0.2rem;
+    font-weight: 400;
+    font-family: 'Raleway', sans-serif;
+    color: #F6F5F4;
+
+}
+
+h5 {
+    font-size: 1.563rem;
+    line-height: 2.3rem;
+    word-spacing: 0.1rem;
+    font-weight: 200;
+    font-family: 'Raleway', sans-serif;
+    color: #F6F5F4;
+}
+
+
+
+h6 {
+    word-spacing: 0.1rem;
+    font-size: 1.25rem;
+    line-height: 2rem;
+    font-weight: 200;
+    font-family: 'Raleway', sans-serif;
+    color: #F6F5F4;
+}
 
 p {
+    word-spacing: 0.2rem;
+    font-size: 1rem;
+    line-height: 1.15rem;
+    font-weight: lighter;
+    font-family: 'Raleway', sans-serif;
+    color: #F6F5F4;
+}
 
-    font-size: 0.6rem;
-    line-height: 0.7rem;
+/* this is for tiny tiny writting */
+.p2 {
+
+    font-size: 0.8rem;
+    line-height: 0.5rem;
+    font-weight: 200;
+    font-family: 'Raleway', sans-serif;
+    color: #EDEBEA;
+}
+
+
+button {
+
+    font-size: 1.3rem;
+    line-height: 1.625rem;
+    font-weight: 200;
+    font-family: 'Raleway', sans-serif;
+    color: #F6F5F4;
+
+    /* background-image: linear-gradient(to right, #FF364C, #FF5C00); */
+    background-color: #525252;
+    border-style: none;
+    margin: 0px 15px;
+    margin-top: 10px;
+    padding: 0.6rem 2rem;
+
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+
 
 }
 
-.card-description p {
+button:hover {
 
-    font-size: 0.5rem;
+    background-color: #2A2D33;
+    transition-duration: 100ms;
+
 }
+
+section button:hover {
+
+    background-color: #B31426;
+    transition-duration: 100ms;
+
+}
+
+button:active {
+
+    background-color: #FF364C;
+    transition-duration: 100ms;
+
+}
+
+footer button {
+
+    font-size: 1.3rem;
+    line-height: 1.625rem;
+    font-weight: 400;
+    font-family: 'Raleway', sans-serif;
+    color: #F6F5F4;
+
+    background-color: #FF364C;
+    border-style: none;
+    margin: 0px 15px;
+    margin-top: 10px;
+    padding: 6px 10px;
+
+}
+
+footer button {
+
+    font-size: 1.3rem;
+    line-height: 1.625rem;
+    font-weight: 400;
+    font-family: 'Raleway', sans-serif;
+    color: #F6F5F4;
+
+    background-color: #FF364C;
+    border-style: none;
+    margin: 0px 15px;
+    margin-top: 10px;
+    padding: 6px 10px;
+
+}
+
 
 a {
-    font-size: 0.6rem;
+
+    font-size: 0.8rem;
+    color: #F6F5F4;
     text-decoration: none;
-    color: white;
 }
 
+footer a {
 
-
-/* common tablet size 768px to 767px */
-@media (max-width: 1000px) {
-
-    .card {
-        margin-bottom: 1rem;
-        min-width: 47%;
-        max-width: 47%;
-        max-height: 100%;
-
-    }
-
-    main {
-
-        width: 50%;
-        margin-left: 25%;
-
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-
-        margin-top: 2.5%;
-
-    }
-
-    nav {
-
-        display: none;
-
-    }
-
-    .nav-mobile {
-        display: block;
-
-    }
-
-    .nav-button {
-
-        margin: 0vh;
-
-    }
+    font-size: 0rem;
 
 }
 
-@media (max-width: 850px) {
+/* Font Extras */
+.bold {
 
-    .header-section {
-
-        width: 70%;
-    }
-}
-
-
-/* Mobile View is below 400 but we're doing it at 500 for now*/
-@media (max-width: 600px) {
-
-
-    .card {
-        /* background-color: red; */
-
-
-        margin-bottom: 1rem;
-        min-width: 100%;
-        max-width: 100%;
-        max-height: 100%;
-
-    }
-
-
-    nav {
-
-        display: none;
-
-    }
-
-    .nav-mobile-tablet {
-        display: block;
-    }
-
-    .card {
-
-        box-shadow: 0px 3px 3px rgb(136, 136, 136, 1);
-
-    }
-
-    .card-description {
-
-        display: none;
-    }
-
-    .header-section {
-
-        width: 80%;
-
-    }
-
-    .logo a {
-
-        margin-top: 9vh;
-
-    }
-
-    .logo a{
-
-        
-        margin-top: 10%;
-    
-
-    }
-
-
+    font-weight: bold;
 
 }
 
-@media (max-width: 350px) {
+.light {
 
-.nav-mobile{
-    display: none;
-
-}
-
-
-
-.header-section{
-    /* background-color: aqua; */
-    display: block;
-
-    width: 100vw;
+    font-weight: lighter;
 
 }
 
-nav{
-    display: block;
-    /* background-color: aquamarine; */
-    height: 60%;
-    width: 100vw;
+.underline {
 
-
+    text-decoration: underline;
 
 }
 
-.nav-button{
-    padding:1%;
-    width: 100%;
+.textShadow {
+
+    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
 
 }
 
-.logo{
-    /* background-color: red; */
-    display: block;
-    height: 40%;
-    margin-top: 2%;
-}
-.logo a{
+.textCenter {
 
-    padding: 10%;
     text-align: center;
-    position:relative;
 
 }
 
+/* colour Picking */
+.black05 {
 
+    color: #F6F5F4;
+
+
+}
+
+.black25 {
+
+    color: #D1CDCA;
+
+
+}
+
+.black {
+
+    color: #46362D;
+
+}
+
+.backgroundBlack {
+
+    background-color: #3C3C3C;
+
+}
+
+.lightMode {
+
+    /* filter: invert(1); */
+    /* filter: invert(1); */
+    /* filter: contrast(1); */
+    /* filter: saturate(1); */
+    filter: sepia(1);
+}
+
+/* Required Media Quiries */
+
+/* Mobile */
+@media only screen and (max-width: 768px) {
+    .PPLetter {
+
+        padding-left: 0px;
+        padding-right: 0px;
+
+
+    }
 }
